--- a/menu-and-submenu/assets/style.scss
+++ b/menu-and-submenu/assets/style.scss
@@ -1,4 +1,4 @@
-$gray: #7a7a7a;
+$gray: #eaeaea;
 $laranja: #ff3e1e;
 .menuandsub{
     padding: 50px 0;
@@ -27,12 +27,18 @@ $laranja: #ff3e1e;
         img{
             margin-left: auto;
             margin-right: auto;
+            height: 40px;
             &.ativo{
                 display: none;
             }
             &.inativo{
                 display: block;
             }
+        }
+        p{
+            font-size: 17px;
+            line-height: 22px;
+            margin-top: 14px;
         }
         &.active{
             border-bottom: solid 2px $laranja;
@@ -46,6 +52,9 @@ $laranja: #ff3e1e;
                 &.inativo{
                     display: none;
                 }
+            }
+            p{
+                color: #ff4024
             }
         }
     }
@@ -85,7 +94,11 @@ $laranja: #ff3e1e;
     }
     .img{
         img{
-            width: 100%;
+            width: auto;
+            max-height: 390px;
+            position: relative;
+            display: block;
+            margin: 0 auto;
         }
     }
     .row{
