--- a/carrossel/assets/style.scss
+++ b/carrossel/assets/style.scss
@@ -7,6 +7,9 @@
     @media (min-width: 1199) {
         box-shadow: 10px -10px 20px 0px #EFEFEF;
     }
+    &.creatingCards{
+        scroll-behavior: unset !important;
+    }
     .sobre-card{
         border-right: 2px solid #F3F3F3;
         text-align: center;
@@ -18,6 +21,7 @@
                 border: 1px solid #EFEFEF;
                 border-radius: 34px;
                 margin-bottom: 30px;
+                width: 100%;
             }
             p{
                 &.name{
